Update code for Basic OOP concept

--- a/Basic Java Class 10/WebJava10/.settings/org.eclipse.core.resources.prefs
+++ b/Basic Java Class 10/WebJava10/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/basicOOP/helloWorld/HelloWorld.java=UTF-8
 encoding//src/basicOOP/loopExample/ArrayExample.java=UTF-8
+encoding//src/basicOOP/oopConcept/Fish.java=UTF-8
+encoding//src/basicOOP/oopConcept/MainClass.java=UTF-8
