--- a/Basic Java Class 10/WebJava10/.classpath
+++ b/Basic Java Class 10/WebJava10/.classpath
@@ -8,5 +8,8 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/My Projects/apache-tomcat-8/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="D:/My Projects/apache-tomcat-8/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-8.0.11.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
